# aion-news-to-signal

./: .gitignore  CHANGELOG.md  Dockerfile  ENV_SETUP.md  README.md  UPLOAD_COMPLETE.md  aion.py  dev_journal_complete.md  dev_journal_v3.md  live_events.json  requirements.txt  sector_propagation_engine.py  stakeholder_impact_mapper.py
.github/workflows/: publish_live_events.yml  update_live_events.yml
aion-sentiment/: README.md  pyproject.toml  setup.py
aion-sentiment-in/: MODEL_CARD_HF.md  README.md  README_HF.md
aion-sentiment/src/aion_sentiment/: __init__.py  sentiment.py  unified_model.py
aion_indian_market_calendar/: LICENSE  README.md  __init__.py  calendar.py  models.py  pyproject.toml
aion_indian_market_calendar/data/: __init__.py  events_2026.json
aion_indian_market_calendar/tests/: conftest.py  test_calendar.py
aion_news_to_signal/: __init__.py  mcp_server.py
aion_news_to_signal_self_hosted/: README.md  pyproject.toml
aion_news_to_signal_self_hosted/src/aion/: __init__.py  model_runtime.py  pipeline.py  sector_engine.py  stakeholder.py  taxonomy_pipeline.py
aion_news_to_signal_self_hosted/src/aion/data/: aligned_4factor_daily.csv  india_vix_daily_spot.csv
aion_news_to_signal_self_hosted/src/aion/models/: README.md
aion_news_to_signal_self_hosted/src/aion/taxonomy/: taxonomy_india_v2_calibrated.yaml
aion_taxonomy/: README.md
aion_taxonomy/scripts/: update_sensitivities.py
aion_taxonomy/src/aion_taxonomy/: event_impact_engine.py  instrument_classifier.py
aion_taxonomy/src/aion_taxonomy/data/: meta_factor_sensitivities.json  sector_sensitivities.json
continue/: README.md  aion-news-to-signal-india.yaml  aion-news-to-signal-uvx.yaml
dataset/: ticker_to_sector.json
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_FLOW.md  RUNTIME_BEHAVIOR.md
examples/: generate_output.py
hf_model_aion_news_to_signal/: README.md
hf_space_aion_news_to_signal/: README.md  app.py
publish_assets/releases/: release_manifest.json  releases.json
pypi_aion_news_to_signal/: README.md  pyproject.toml
pypi_aion_news_to_signal/src/aion/: __init__.py
pypi_aion_news_to_signal/src/aion_news_to_signal/: __init__.py
scripts/: fetch_meta_data.py  poll_nse_rss.py  refresh_sensitivities.py
src/api/: __init__.py  app.py  key_utils.py  quota_manager.py  rate_limiter.py  server.py  usage_logger.py
wheel_build/: MANIFEST.in  README.md  aion.py  server.json  setup.py
wheel_build/aion_news_to_signal/: __init__.py  client.py  mcp_server.py
