[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-indian-market-calendar"
version = "0.1.0"
description = "Indian stock market calendar for NSE, MCX, Indian trading holidays, and intraday session-aware market-open checks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "AION Analytics" }
]
keywords = [
  "india",
  "nse",
  "mcx",
  "market-calendar",
  "intraday-trading",
  "algorithmic-trading",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AION-Analytics/aion-news-to-signal"
Repository = "https://github.com/AION-Analytics/aion-news-to-signal"
"API Signup" = "https://api.aiondashboard.site/signup"
"Paid Plans" = "https://api.aiondashboard.site/signup/paid"
"Hugging Face" = "https://huggingface.co/AION-Analytics/aion-news-to-signal"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
packages = ["aion_indian_market_calendar", "aion_indian_market_calendar.data"]
include-package-data = true

[tool.setuptools.package-dir]
aion_indian_market_calendar = "."

[tool.setuptools.package-data]
aion_indian_market_calendar = ["data/*.json"]
